deployment/docs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    krum.app: docs-${CICD_GIT_BRANCH}
    io.kompose.service: docs-${CICD_GIT_BRANCH}
  name: docs-${CICD_GIT_BRANCH}
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: docs-${CICD_GIT_BRANCH}
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.24.0 (HEAD)
        rancher.deployment.version: ${CICD_EXECUTION_ID}
      creationTimestamp: null
      labels:
        io.kompose.network/web: "true"
        io.kompose.service: docs-${CICD_GIT_BRANCH}
    spec:
      imagePullSecrets:
        - name: pipeline-docker-registry
      containers:
        - env:
            - name: PORT
              value: "8000"
          image: ${CICD_IMAGE}:${CICD_GIT_BRANCH}
          name: docs-${CICD_GIT_BRANCH}
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    krum.app: docs-${CICD_GIT_BRANCH}
    io.kompose.service: docs-${CICD_GIT_BRANCH}
  name: docs-${CICD_GIT_BRANCH}
  namespace: development
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: docs-${CICD_GIT_BRANCH}
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    krum.app: docs-${CICD_GIT_BRANCH}
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: docs-${CICD_GIT_BRANCH}
  name: docs-${CICD_GIT_BRANCH}
  namespace: development
spec:
  rules:
  - host: ${CICD_GIT_BRANCH}.devnetes.com
    http:
      paths:
      - backend:
          serviceName: docs-${CICD_GIT_BRANCH}
          servicePort: 8000
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - ${CICD_GIT_BRANCH}.devnetes.com
    secretName: crt-devnetes-com-${CICD_GIT_BRANCH}
status:
  loadBalancer: {}
